Fixed the name overflow in movie list item

--- a/src/movie-list/index.css
+++ b/src/movie-list/index.css
@@ -23,6 +23,7 @@
 
 .thumbnail-holder {
     width: 80px;
+    min-width: 80px;
 }
 
 .card-img {
